--- a/leetcode题库/5. 最长回文子串.md
+++ b/leetcode题库/5. 最长回文子串.md
@@ -126,3 +126,43 @@ class Solution {
 
 #### 题解三 中心扩散法
 
+逐个遍历, 看是否是回文串的中心
+
+这里有两种情况, 回文串长度为 奇/偶 数
+
+是的话就和 max 比较长度, 找出最长的
+
+> 这个解法速度最快, 但是没有那么容易想到
+
+```java
+class Solution {
+  public String longestPalindrome(String s) {
+    int length = s.length();
+    char[] str = s.toCharArray();
+    int max=-1;
+    String res = new String();
+    for(int i=0;i<str.length;i++){
+      // 回文串是奇数
+      int left = i;
+      int right = i;
+      for(int index=0;index<2;index++){
+
+      while(left>=0 && right < str.length && str[left]==str[right]){
+        left--;
+        right++;
+      }
+      int l = (right-1)-(left+1)+1;
+      if(l>max){
+        max = l;
+        res = s.substring(left+1, right);
+      }
+      // 回文是偶数
+      right = i+1;
+      left = i;
+      }
+    }
+    return res;
+  }
+}
+```
+
