--- a/解题套路/解题套路.md
+++ b/解题套路/解题套路.md
@@ -6,11 +6,27 @@
 
 ## 算法思想
 
-二分法
+- 二分法
 
-双指针
+- 双指针
 
-滑动窗口
+- 滑动窗口
+
+- 动态规划
+
+- 回溯法
+
+  > 感觉回溯法不是很独立, 像是广度和深度优先搜索的进阶 , 加一个是否遍历的条件
+  >
+  > 条件包括题目的要求, 以及是否遍历过
+  >
+  > 有时是否遍历过还要用个数组单独记录
+  >
+  > 或者遍历到时改变值用来检验是否遍历过, 然后当前位置后面的遍历结束后, 把当前位置的值改回来
+
+- 广度优先搜索
+
+- 深度优先搜索
 
 ## 数据结构
 
