--- a/算法设计与分析_笔记/算法设计.md
+++ b/算法设计与分析_笔记/算法设计.md
@@ -30,3 +30,10 @@
 
 ## 回溯
 
+> 感觉回溯法不是很独立, 像是广度和深度优先搜索的进阶 , 加一个是否遍历的条件
+>
+> 条件包括题目的要求, 以及是否遍历过
+>
+> 有时是否遍历过还要用个数组单独记录
+>
+> 或者遍历到时改变值用来检验是否遍历过, 然后当前位置后面的遍历结束后, 把当前位置的值改回来
