--- a/leetcode题库/17. 电话号码的字母组合.md
+++ b/leetcode题库/17. 电话号码的字母组合.md
@@ -6,7 +6,7 @@
 
 给出数字到字母的映射如下（与电话按键相同）。注意 1 不对应任何字母。
 
-![img](https://gitee.com/kevinzhang1999/my-picture/raw/master/uPic/17_telephone_keypad-1617257375093.png)
+![img](https://raw.githubusercontent.com/Kevin-Kevin/pictureBed/master/uPic/17_telephone_keypad-1617257375093.png)
 
  
 
