--- a/解题套路/算法设计.md
+++ b/解题套路/算法设计.md
@@ -22,21 +22,11 @@
 
 根据子问题的最优解求出问题的解
 
-
+问题需满足最优子结构
 
 ![image-20210331165231097](https://raw.githubusercontent.com/Kevin-Kevin/pictureBed/master/uPic/image-20210331165231097-1617180751208.png)
 
-
-
-
-
-
-
 ## 贪心
-
-
-
-
 
 ## 回溯
 
